# question-answering-example

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
base_project/: _utils.py  launch.py
base_project/common/: __init__.py  depth_logging.py  timer.py
extractive/huggingface/: pyproject.toml
extractive/huggingface/huggingface/: main.ipynb
memory-network/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
memory-network/memory_network/: _utils.py  babi_eng.ipynb
memory-network/memory_network/common/: __init__.py  depth_logging.py  timer.py  utils.py
