[tool.poetry]
name = "base-project"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "6.5.6"
jupyterthemes = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
