[tool.poetry]
name = "memory-network"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
notebook = "6.5.6"
jupyterthemes = "0.20.0"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = {version = "2.12", extras = ["and-cuda"]}
nltk = "^3.8.1"
pandas = "^2.1.4"
customized-konlpy = "^0.0.64"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
