[tool.poetry]
name = "huggingface"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "6.5.6"
jupyterthemes = "0.20.0"
torch = {version = "2.0.1", source="torch"}
transformers = {extras = ["sentencepiece"], version = "^4.36.1"}
datasets = "^2.15.0"
evaluate = "^0.4.1"
ipywidgets = "^8.1.1"
accelerate = "^0.25.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

